# jupyter

./: .gitignore  .pylintrc  README.md
Algo/: cpp.ipynb  sortAlgo_cpp.ipynb  sort_cpp.ipynb  十大经典排序算法源码.cpp
Algo/.ipynb_checkpoints/: cpp-checkpoint.ipynb
Algo/c/: Algo.cpp
crypto/: crypto.md
crypto/binance/: backtest.ipynb  backup.ipynb  binance.ipynb  pip.ipynb  sklearn.ipynb  thread.ipynb  trade.ipynb  wsAcc.ipynb  wsHq.ipynb
crypto/pkl/: accountdf.pkl  balancedf.pkl  basic_candlestick.html  binance.db  exchangeInfo_u.pkl  positiondf.pkl  uk30mdf.pkl  uk4hdf.pkl  uk5mdf.pkl
crypto/sql/: Trace.session.sql  binance.session.sql
dev/: It.md  LuaS.lua  api.rest  full2half.sh  mysql.sql  pd.py  rest.http  sh.sh
prod/: fil.sh  readme.md  real31.md  test31.md  testfil.md
settings/: .bashrc  .vimrc  SQlServerClient_config.json  gitTimer.sh  readme.md  requirements.txt  setEnv.sh
settings/DBeaver/: DBeaver-项目-General-20221206.dbp
settings/aliyunpan/: sync.sh
settings/ubuntu/: .bashrc  .condarc  Init_sources.sh  clang.yml  cling.yml  extensions.json  gitTimer.sh  id_rsa_intel.pub  init.sh  readme.md  sources.list  wls_rclocal.vbs
stock/: quant.md  stock.md
stock/Chirps/: Cricket_Chirps.ipynb  QT202012.ipynb  Redis.ipynb  Strategy.ipynb  akshare.ipynb  (+3 more)
test/cpp/log/log4c/: CMakeLists.txt  MyLogger.h  main.cpp
tmp/: j.json  j6831.json  r.json  t1.py  t2.py  t4.py  test.sh
tutorial/: algo.md  c.md  cplus.md  datastructure.md  design.md  docker.md  gdb.md  git.md  lang.md  learnc-cn.c  learncpp-cn.cpp  makefile.md  mysql.md  tdx.md  test.md  vim.md
(+582 files in other folders)
